# converter

./: CMakeLists.txt  README
bitscan/: CMakeLists.txt  README.md  bbalg.h  bbintrinsic.h  bbintrinsic_sparse.h  bbobject.h  bbsentinel.cpp  bbsentinel.h  bbtypes.h  biicode.conf  bitboard.cpp  bitboard.h  bitboardn.cpp  bitboardn.h  bitboards.cpp  bitboards.h  bitscan.h  config.h  legal.txt  tables.cpp  tables.h
bitscan/tests/: test_algorithms.cpp  test_bitblock.cpp  test_bitstrings.cpp  test_example.cpp  test_masking.cpp  test_sentinels.cpp  test_sparse.cpp
copt/: .gitignore.swp  CMakeLists.txt  CMakeLists_COPT.txt  CMakeLists_MIX.txt  CMakeLists_XML.txt  clique_sort.h  ignore.bii  init_color_sort.cpp  init_color_sort.h  init_color_ub.h  init_color_ub_weighted.h  init_csp.h  prueba.cpp  readme.md  setup.h
copt/amts/: amts_exec.h  mnts.cpp  mnts.h
copt/batch/: batch_benchmark.h  benchmark_clique.cpp  benchmark_color.cpp  benchmark_color.h
copt/clique/: clique.h  clique_all_max_sol.h  clique_csp_plus.h  clique_degsort.h  clique_enum.h  clique_enum_fixed.h  clique_enum_sparse.h  clique_infra.h  clique_infra_plus.h  clique_iter.h  clique_russian_doll.h  clique_russian_doll_plus.h  clique_sat.h  clique_types.h  clique_watched.h  clique_weighted.h  clique_weighted_plus.h  filter_csp_plus.h  infra_tools.h  infra_tools_plus.h  infra_tools_plus_csp.h  infra_weighted_tools.h
copt/clique/algorithms/: clique_partition.h  cover.h
copt/clique/heur/: cover_mwss.h  super_weight.h  ub_weighted_clique.h
copt/clique_para/: clique_para.h  clique_para_iter.h  clique_para_sat.h  clique_parallel.h
copt/color/: color_utils.h
copt/converter/: XCSP3PrintCallbacks.h  converter.cpp
copt/csp_converter/: main.cc
copt/data/: 1dc.512-c.clq  1dc.512-c.clq.col  brock200_1.clq  brock200_2.clq  csp_file.csp  csp_file_2.csp  csp_file_3.csp  frb30-15-1.csp  frb30-15-1_rlf.clq  gen400_p0.9_55_rlf.clq  grafo.clq  grafo2.clq  graphPg01.txt  graph_Pm01.txt  imgJA.clq  keller5_rlf.clq  sanr400_0.7_rlf.clq
copt/data/giter/: r7_0.6_89.txt
copt/data/infraplus/: r19_0.8_60.txt  r200_0.7_2.txt  r43_0.7_75.txt
copt/data/interdiction/: r10_0.2_3.txt
copt/examples/: batch_bench.cpp  batch_bench_para.cpp  batch_rnd.cpp  batch_rnd_set.cpp  bbmc_csp.cpp  bbmc_csp_plus.cpp  bbmc_degsort.cpp  bbmc_dolls.cpp  bbmc_folder.cpp  bbmc_infra.cpp  bbmc_infra_plus.cpp  bbmc_init_lb.cpp  bbmc_iter.cpp  bbmc_partition.cpp  bbmc_sat.cpp  bbmc_watched.cpp  bbmc_weighted.cpp  bbmcsp.cpp  bbmcsp_init_lb.cpp  enumeration.cpp  enumeration_sparse.cpp  initial_sorting.cpp  match.cpp  middle_sparse.cpp  middle_sparse_rnd.cpp  open_problems.cpp  parallel_bbmc.cpp  parallel_bbmcsp.cpp  published_alg.cpp
copt/include/: XCSP3CoreParser.h
copt/interfaces/: interface_interdiction.h  interface_interdiction_plus.h  interface_partition.h  readme.txt
copt/tests/: gtest_main.cc  test_amts.cpp  test_batch_benchmark.cpp  test_batch_gen.cpp  test_clique.cpp  test_clique_all_max_sol.cpp  test_clique_para.cpp  test_clique_parallel.cpp  test_cliques_command_line.cpp  test_cliques_in_folder.cpp  test_color.cpp  test_color_utils.cpp  test_csp.cpp  test_enum.cpp  test_infra.cpp  test_interdiction_clique.cpp  test_interdiction_plus_clique.cpp  test_order.cpp  test_partition_clique.cpp  test_setup.cpp  test_weighted_clique.cpp
graph/: CMakeLists.txt  biicode.conf  filter_graph_encoding_type.h  graph.h  kcore.h  legal.txt  readme.md  simple_ugraph.h
graph/algorithms/: decode.h  graph_func.h  graph_map.h  graph_sort.h
graph/data/: auxfilerandomTEST.txt  bio-MUTAG_g1.edges  bio-yeast.mtx  bio-yeast_bad_header.mtx  brock200_1.clq  failed_lb.clq  ia-southernwomen.edges  r10_0.2_23.txt  r10_0.3_0.txt  star.clq
graph/examples/: gen_random.cpp  graph_formats.cpp
graph/formats/: edges_reader.h  mmio.cpp  mmio.h  mmx_reader.h
graph/tests/: gtest_main.cpp  test_degree.cpp  test_fixed_graph.cpp  test_format.cpp  test_func.cpp  test_graph.cpp  test_graph_map.cpp  test_graph_properties_in_folder.cpp  test_graph_sort.cpp  test_kcore.cpp  test_kcore_in_folder.cpp  test_random_graph.cpp  test_sparse_graph.cpp  test_wgraph.cpp
tclap/: CMakeLists.txt  README.md  biicode.conf
utils/: CMakeLists.txt  batch.h  benchmark.cpp  benchmark.h  biicode.conf  common.h  file.h  logger.cpp  logger.h  prec_timer.h  result.cpp  result.h  test_analyser.cpp  test_analyser.h  thread.h
(+1 files in other folders)
